# Anima

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DATASETS.md  Dockerfile  README.md  config.default.toml
.github/workflows/: p0-gates.yml  release.yml
benchmarks/: Dockerfile
benchmarks/locomo/: Dockerfile  REPORT.md  RESULTS.md  compare_servers.py  run.py  run_think.py
benchmarks/longmemeval/: Dockerfile  run.py
crates/anima-consolidate/: Cargo.toml
crates/anima-consolidate/src/: actions.rs  consolidator.rs  lib.rs  llm_client.rs  prompts.rs
crates/anima-core/: Cargo.toml
crates/anima-core/src/: error.rs  lib.rs  memory.rs  namespace.rs  search.rs  temporal.rs
crates/anima-db/: Cargo.toml
crates/anima-db/src/: fts.rs  lib.rs  pool.rs  quantize.rs  schema.rs  sparse.rs  store.rs  vector.rs
crates/anima-embed/: Cargo.toml
crates/anima-embed/examples/: compare_embed.rs
crates/anima-embed/src/: download.rs  lib.rs  model.rs  openai.rs  reranker.rs
crates/anima-server/: Cargo.toml
crates/anima-server/src/: app.rs  config.rs  dto.rs  handlers.rs  main.rs  processor.rs  prompts.rs  service.rs  telemetry.rs
docs/: docs.json  index.mdx  prd-anima-roadmap.md  quickstart.mdx  release-0.2.0.md
docs/api-reference/: introduction.mdx
docs/api-reference/audit/: events.mdx
docs/api-reference/chat/: ask.mdx  chat-stream.mdx  chat.mdx
docs/api-reference/conflicts/: contradictions.mdx  history.mdx
docs/api-reference/memories/: create-batch.mdx  create.mdx  delete.mdx  get.mdx  list.mdx  merge.mdx  search.mdx  update.mdx
docs/api-reference/revisions/: list.mdx  rollback.mdx
docs/api-reference/system/: health.mdx  namespaces.mdx  profiles.mdx  stats.mdx  vectors.mdx  weights.mdx
docs/concepts/: memory-types.mdx  namespaces.mdx  profiles.mdx  retrieval.mdx
docs/integrations/: mcp.mdx  web-ui.mdx
mcp/: package-lock.json  package.json
mcp/src/: client.ts  index.ts
scripts/: extract_sparse_weights.py  start_local.sh
service/: anima-server.service  dev.anima.server.plist
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/components/: Layout.tsx  NamespacePicker.tsx
web/src/components/dashboard/: AccessPatterns.tsx  LifecyclePie.tsx  NamespaceBreakdown.tsx  StatCards.tsx
web/src/hooks/: useChat.ts  useNamespace.ts  useToast.tsx
web/src/pages/: ChatPage.tsx  ConflictsPage.tsx  DashboardPage.tsx  EmbeddingPage.tsx  Graph3DPage.tsx  GraphPage.tsx  MemoriesPage.tsx  ProcessorLogPage.tsx  SearchPage.tsx  SettingsPage.tsx
