[workspace]
members = [
    "crates/anima-core",
    "crates/anima-db",
    "crates/anima-embed",
    "crates/anima-consolidate",
    "crates/anima-server",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlite-vec = "0.1.7-alpha.2"

# Embeddings
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# LLM client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1"
sha2 = "0.10"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
async-trait = "0.1"

# Internal crates
anima-core = { path = "crates/anima-core" }
anima-db = { path = "crates/anima-db" }
anima-embed = { path = "crates/anima-embed" }
anima-consolidate = { path = "crates/anima-consolidate" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
