[package]
name = "anima-consolidate"
version = "0.2.0"
edition = "2021"

[dependencies]
anima-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
