[package]
name = "anima-db"
version = "0.2.0"
edition = "2021"

[dependencies]
anima-core = { workspace = true }
anima-embed = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
