[package]
name = "anima-server"
version = "0.1.0"
edition = "2021"
default-run = "anima-server"

[[bin]]
name = "bench_search"
path = "src/bin/bench_search.rs"

[dependencies]
anima-core = { workspace = true }
anima-db = { workspace = true }
anima-embed = { workspace = true }
anima-consolidate = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
anyhow = { workspace = true }
reqwest = { workspace = true }
ndarray = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
dotenvy = "0.15.7"
sha2 = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
